<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OX WIX</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login">登录</string>
    <string name="logout">注销</string>
    <string name="exit">退出</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="room">选择房间</string>
    <string name="table">选择桌位</string>
    <string name="skin">选择皮肤</string>
    <string name="title_food_list">美食清单</string>
    <string name="add_to_cart">加入购物车</string>
    <string name="price">价格：</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="food_list">食物清单</string>
    <string name="order_list">订单清单</string>
    <string name="success">成功</string>
    <string name="order_confirmed">订单确认</string>
    <string name="check_out_list">结账清单</string>
    <string name="food_name">菜名</string>
    <string name="order_now">确认下单</string>
    <string name="pay_now">现在支付</string>
    <string name="add_more">添加更多</string>
    <string name="username_cannot_be_empty">用户名不能为空</string>
    <string name="password_cannot_be_empty">密码不能为空</string>
    <string name="login_failure_server_error_message">登录失败，请稍候重试</string>
    <string name="login_failure_userinfo_error_message">用户名或密码有误，请重新登录</string>
    <string name="login_loading_message">正在登录...</string>
    <string name="choose_room">请选择房间</string>
    <string name="choose_table">请选择桌位</string>
    <string name="choose_skin">请选择皮肤</string>
    <string name="access_server_failure">操作失败，请稍候再试</string>
    <string name="loading_food_data_message">正在加载食物数据...</string>
    <string name="loading_room_data_message">正在加载房间和桌位...</string>
    <string name="loading_message">正在加载...</string>
    <string name="loading_my_order_message">正在加载我的订单...</string>
    <string name="loading_failure">加载失败...</string>
    <string name="no_order">您还没有没有订单!</string>
    <string name="choose_room_first">请先选择房间</string>
    <string name="shopping_cart_food_quantity">数量</string>
    <string name="shopping_cart_food_price">单价</string>
    <string name="shopping_cart_food_sum">小计</string>
    <string name="shopping_cart_food_status">状态</string>
    <string name="remove">删除</string>
    <string name="sent">发送</string>
    <string name="total">总计：</string>
    <string name="items">项数：</string>
    <string name="add_to_cart_sucess">已经成功添加到购物车中</string>
    <string name="remove_dialog_message">你确定要删除这一项？</string>
    <string name="logout_dialog_message">退出将会清空购物车,您确定要注销吗？</string>
    <string name="create_order_dialog_message">正在创建订单...</string>
    <string name="check_out">结账</string>
    <string name="ok">确认</string>
    <string name="create_order_error">创建订单失败</string>
    <string name="welcome">欢迎</string>
    <string name="checkin">进入</string>
    <string name="ask_checkout">请问您是真的要付款了吗?</string>
    <string name="started">开始</string>
    <string name="finished">完成</string>
    <string name="comming">进行中</string>
    <string name="my_ordered_items">我的订单</string>
    <string name="your_cart_items">加在购物车的订单</string>
    <string name="yes">是</string>
    <string name="input_hint_message">输入不能为空!</string>
    <string name="enter_your_name">请输入您的姓名</string>
    <string name="order_success">订单发送</string>
    <string name="success_slogan">你的订单已经发送到厨房。服务员很快就会提供的,你可以检查你的订单状态在我的订单列表页面。</string>
    <string name="view_order">查看我的订单</string>
    <string name="order_more">订购更多</string>
    <string name="confirm_checkout">你真的想现在结帐吗?如果是的,请单击“查看”。</string>
    <string name="thank_you">谢谢你！</string>
    <string name="confirm_success">你的付款请求已发送成功。</string>
    <string name="give_feedback">请给出你的反馈意见。</string>
    <string name="table_alread_checked">这个桌子已经预订,请联系经理。</string>
    <string name="new_orders">新订单</string>
    <string name="running_orders">正在进行的订单</string>
    <string name="finished_orders">完成的订单</string>
    <string name="show_by_group">显示的组</string>
    <string name="log_out">注销</string>
    <string name="table_name">桌子</string>
    <string name="start">开始</string>
    <string name="undo">撤销</string>
    <string name="finish">完成</string>
    <string name="send">发送</string>
    <string name="Chocolate">Chocolate</string>
    <string name="Green">Green</string>

</resources>