<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="5dp"
    android:paddingTop="5dp" >

    <TextView
        android:id="@+id/tv_table"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:lines="2"
        android:text="@string/table_name"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize20" />

    <TextView
        android:id="@+id/tv_food_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:lines="2"
        android:text="@string/food_name"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize20" />

    <TextView
        android:id="@+id/tv_quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/shopping_cart_food_quantity"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize20" />

    <Button
        android:id="@+id/btn_undo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@drawable/button_bg_dark_green"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/undo"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize20" />

    <Button
        android:id="@+id/btn_deliva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0"
        android:background="@drawable/button_red_selector"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize20"
        android:textStyle="bold" />

</LinearLayout>