<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_select_room"
            android:layout_width="300dp"
            android:layout_height="52dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_bg_white_selector"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/room"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize16"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_select_table"
            android:layout_width="300dp"
            android:layout_height="52dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_bg_white_selector"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/table"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize16"
            android:textStyle="bold" />
        
        <Button
            android:id="@+id/btn_select_skin"
            android:layout_width="300dp"
            android:layout_height="52dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_bg_white_selector"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/Chocolate"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize16"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="36dp"
            android:gravity="center" >

            <Button
                android:id="@+id/btn_save"
                android:layout_width="120dp"
                android:layout_height="46dp"
                android:background="@drawable/button_green_selector"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize18" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="120dp"
                android:layout_height="46dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/button_red_selector"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize18" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>