<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/order_list_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:id="@+id/layout_title_bar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/bg_food_title" >

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@color/transparent"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:src="@drawable/back_btn_bg_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/my_ordered_items"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize20"
                android:textStyle="bold" />
        </RelativeLayout>

        <View
            android:id="@+id/line"
            android:layout_above="@+id/confirm_layout"
            android:layout_width="match_parent"
            android:background="@drawable/login_diliver_line"
            android:layout_height="1dp"/>
        
        <RelativeLayout
            android:id="@+id/confirm_layout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:background="@color/white" >

            <TextView
                android:id="@+id/tv_items_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="80dp"
                android:text="@string/items"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize20"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/tv_items_text"
                android:singleLine="true"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize20"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="100dp"
                android:singleLine="true"
                android:text="￥0.0"
                android:textColor="@color/red"
                android:textSize="@dimen/textsize20"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_total_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/tv_total"
                android:text="@string/total"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize20"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_check_out"
                android:layout_width="200dp"
                android:layout_height="52dp"
                android:layout_centerInParent="true"
                android:background="@drawable/button_red_selector"
                android:text="@string/pay_now"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize20"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/confirm_layout"
            android:layout_below="@id/layout_title_bar"
            android:layout_marginTop="30dp"
            android:orientation="vertical" >


            <RelativeLayout
               
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="100dp"
                    android:text="@string/food_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize20" />

                <TextView
                    android:id="@+id/tv_count"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="116dp"
                    android:gravity="center"
                    android:text="@string/shopping_cart_food_sum"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize20" />

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@id/tv_count"
                    android:gravity="center"
                    android:text="@string/shopping_cart_food_price"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize20" />

                <TextView
                    android:id="@+id/tv_quantity"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="74dp"
                    android:layout_toLeftOf="@+id/tv_price"
                    android:gravity="center"
                    android:text="@string/shopping_cart_food_quantity"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize20" />
            </RelativeLayout>

            <View
                
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/diliver_line_bg_color"
                android:visibility="gone" />

            <ListView
                android:id="@+id/lv_order_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@color/diliver_line_bg_color"
                android:dividerHeight="1dp"
                android:paddingLeft="40dp"
                android:paddingRight="30dp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>