<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/order_list_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/confirm_layout"
            android:layout_below="@id/layout_title_bar"
            android:layout_marginTop="30dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                     <TextView
                    android:id="@+id/tv_table"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/table_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize20" />

                <TextView
                    android:id="@+id/tv_food_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/food_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize20" />

                <TextView
                    android:id="@+id/tv_quantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/shopping_cart_food_quantity"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize20" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:background="@color/transparent"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/start"
                    android:textColor="@color/transparent"
                    android:textSize="@dimen/textsize20" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0"
                    android:background="@color/transparent"
                    android:gravity="center"
                     android:layout_marginRight="20dp"
                    android:padding="15dp"
                    android:text="@string/start"
                    android:textColor="@color/transparent"
                    android:textSize="@dimen/textsize20" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/diliver_line_bg_color"
                android:visibility="gone" />

            <ListView
                android:layout_marginLeft="10dp"
                android:id="@+id/lv_order_food"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@color/diliver_line_bg_color"
                android:dividerHeight="1dp"
               />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>